# aiteamtest

./: .gitignore  AGENTS.md  pyproject.toml
ISSUE_TEMPLATE/: ai-dev-task.md
core/: constraints.py  coordinate.py  document.py  precision.py  types.py
docs/: exporter_snapshots.md
schemas/: ai_commands.schema.json
scripts/: run_bezier_test.py  run_circle_test.py  run_ellipse_test.py  run_p1_export_test.py
services/: ai_agent.py  batch_command_executor.py  benchmark_runner.py  breakpoint_optimizer.py  command_executor.py  command_preview.py  command_schema.py  contour_extractor.py  debug_artifacts.py  distance_field_diff.py  document_integrity.py  dxf_exporter.py  edge_error.py  ellipse_fitter.py  fitting_confidence.py  g1_candidate_detector.py  history_manager.py  json_exporter.py  lock_manager.py  minimal_pipeline.py  refinement_feedback.py  refiner.py  renderer.py  resampler.py  scorer.py  segment_rigidity.py  segment_sampler.py  self_intersection.py  shape_candidate_detector.py  shared_tangent.py  simple_vectorizer.py  skeleton_graph.py  snapping.py  style_analyzer.py  svg_exporter.py  topology.py
tests/: snapshot_utils.py  test_ai_command_schema.py  test_ai_review_flow.py  test_ai_suggestion_visualization.py  test_batch_command_executor.py  test_benchmark_runner.py  test_breakpoint_optimizer.py  test_coincident_constraint.py  test_command_executor.py  test_command_executor_replace_arc.py  test_command_executor_replace_circle.py  test_command_executor_replace_ellipse.py  test_command_executor_replace_line.py  test_command_preview.py  test_command_schema.py  (+47 more)
(+10 files in other folders)
