[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "curve-fitting-ai-agent"
version = "0.1.0"
description = "Minimal scaffold for the curve fitting AI agent project."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2",
    "opencv-python-headless>=4.13,<5",
    "jsonschema>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
